--- a/src/pages/unauthorized/SearchMentors/sections/FiltersHeader/FiltersHeader.module.scss
+++ b/src/pages/unauthorized/SearchMentors/sections/FiltersHeader/FiltersHeader.module.scss
@@ -95,7 +95,6 @@
   .inlineRow {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 16px;
   }
 
